# RetailQuant

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  STRATEGIES.md  TODOLIST.md  _test_api.py  _test_sina.py  app.py  board.py  config.toml  data.py  datasources.py  portfolio.py  pyproject.toml  requirements.txt  strategy.py
.codewhale/: instructions.md
cache/: rquant.db  rquant.db-shm  rquant.db-wal  sh000001.json  sh510500.json  sh516510.json  sh600036.json  sh600460.json  sh600519.json  sh601318.json  sz000001.json  sz159928.json
config/: __init__.py  config.py
data/: portfolio.json  sh512010.json  sh512480.json  sh515980.json  snapshots.json  sz159865.json  trades.json  watchlist.json
docs/: CHANGELOG.md  STRATEGIES.md  TODOLIST.md  code-walkthrough-2026-06-22.md  multi_factor_report.md  multi_factor_v2_report.md  opt-2026-06-22.md  qlib_usage.md  semiconductor_compute_10x10_report.md  strategy设计详解.md  ui.md  中英对照表.md  代码索引.md  多因子选股回测系统.md  大纲.md  数据池.md  架构分析报告.md  策略回测链路测试文档.md
reports/: 2026-06-24.html  2026-06-24.json  2026-06-24.typ
results/: backtest_data.json  backtest_multi_factor_equity.csv  backtest_multi_factor_summary.json  backtest_multi_factor_trades.csv  backtest_report.html  freq_sweep.json
rquant/: __init__.py
scripts/: backtest_multi_factor.py  compare_strategies.py  fetch_board_universe.py  fetch_hist.py  fetch_hist_for_pool.py  review.py  run.py  run_backtest.py  run_semiconductor_compute_10x10.py  score_stock.py  select_board_pool.py  simulate_trading.py
static/: style.css
strategies/: __init__.py
(+579 files in other folders)
