[project]
name = "retailquant"
version = "0.1.0"
description = "A 股个人量化看板 — Flask + 缠论近似 + 板块 Treemap + 自选股 + 数据源池"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "pandas>=2.0",
    "requests>=2.30",
    "squarify>=0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
