[project]
name = "retailquant"
version = "0.1.0"
description = "A 股个人量化看板 — Flask + 缠论近似 + 板块 Treemap + 自选股 + 数据源池"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "pandas>=2.0",
    "requests>=2.30",
    "squarify>=0.4",
    "curl-cffi>=0.13.0",
    "akshare>=1.18.64",
    "pyarrow",
    "loguru>=0.7",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["rquant*", "config"]

[tool.setuptools]
py-modules = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
